--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <h3>12/24/2019</h3>
   <img src="C:\Users\olive\Desktop\Web Development\cute1.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
   <hr size="3" noshade />
-  <a href="My Personal Site.HTML">Main Site</a>
+  <a href="C:\Users\olive\Desktop\Web Development\HTML personal site\My Personal Site.html">Main Site</a>
 
 </body>
 
