--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="C:\Users\olive\Desktop\Web Development\2.jpg" alt="I'm so cute">
+  <img src="cute3.jpg" alt="I'm so cute">
   <hr siza"3" noshade />
   <table>
     <tr>
