--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-  <img src="cute3.jpg" alt="I'm so cute">
   <hr siza"3" noshade />
   <table>
     <tr>
-      <td>  <img src="C:\Users\olive\Desktop\Web Development\cute3.jpg" alt="I'm so cute"></td>
+      <td>   <img src="cute3.jpg" alt="I'm so cute"></td>
       <td>
         <table>
           <tr>
@@ -99,7 +98,7 @@
   <h3>12/24/2019</h3>
   <img src="C:\Users\olive\Desktop\Web Development\cute1.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
   <hr size="3" noshade />
-  <a href="C:\Users\olive\Desktop\Web Development\HTML personal site\My Personal Site.html">Main Site</a>
+  <a href="My Personal Site.html">Main Site</a>
 
 </body>
 
