--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <p><strong>快点回到你的万能猪猪身边吧
       🌹<br><em>love you</em></strong></p>
   <h3>12/24/2019</h3>
-  <img src="C:\Users\olive\Desktop\Web Development\cute1.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
+  <img src="cute1.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
   <hr size="3" noshade />
   <a href="My Personal Site.html">Main Site</a>
 
