Update My Personal Site.html

--- a/My Personal Site.html
+++ b/My Personal Site.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="C:\Users\olive\Desktop\Web Development\9c5f0022gy1g8yhptt808j215o15ogt3.jpg" alt="image1"></td>
+      <td><img src="1.jpg" alt="image1"></td>
       <td>
         <h1>My CLC Website Project 19/20</h1>
         <h3>Coding from scratch to a functional Website</h3>
@@ -41,8 +41,8 @@
   <h2>Documentation</h2>
   <h4>Initiation</h4>
   <p>Dec 1st,2019</p>
-  <p><a href="C:\Users\olive\Desktop\Web Development\HTML personal site\Documentation.html">My Process</a></p><br>
-  <a href="C:\Users\olive\Desktop\Web Development\HTML personal site\Contact Me.html">Contact Me</a>
+  <p><a href="Documentation.html">My Process</a></p><br>
+  <a href="Contact Me.html">Contact Me</a>
   <hr>
   <table border="1">
     <thead>
