--- a/Documentation.html
+++ b/Documentation.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <p><a href="C:\Users\olive\Desktop\Web Development\HTML personal site\index.html">Sample Website</a></p>
+  <p><a href="index.html">Sample Website</a></p>
 </body>
 
 </html>
