--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>💕仙女屋💕</title>
-    <link rel="icon" href="C:\Users\olive\Desktop\Web Development\favicon (1).ico">
-    <a class="mainsite" href="C:\Users\olive\Desktop\Web Development\HTML personal site\My Personal Site.html">Main Site</a>
-    <link rel="stylesheet" href="C:\Users\olive\Desktop\Web Development\css\styles2.css">
+    <link rel="icon" href="favicon (1).ico">
+    <a class="mainsite" href="My Personal Site.html">Main Site</a>
+    <link rel="stylesheet" href="styles2.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Dancing+Script|Kulim+Park&display=swap" rel="stylesheet">
     <style media="screen">
 
@@ -18,9 +18,9 @@
   <p>这里是可爱的陈一诺小仙女的自然栖息地</p>
   <p>每一天都是新的可爱</p>
 <br>
-  <img class="XXN-1" src="C:\Users\olive\Desktop\Web Development\XXN.jpg" alt="XXN">
+  <img class="XXN-1" src="XXN.jpg" alt="XXN">
   <div class="hello-image">
-    <img src="C:\Users\olive\Desktop\Web Development\hello-xxn.jpg" alt="hello">
+    <img src="hello-xxn.jpg" alt="hello">
   </div>
 </div>
 
@@ -115,7 +115,7 @@
     <p><strong>快点回到你的万能猪猪身边吧
         🌹<br><em>love you</em></strong></p>
     <h3>12/24/2019</h3>
-    <img class="circular" src="C:\Users\olive\Desktop\Web Development\blue-white.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
+    <img class="circular" src="blue-white.jpeg" alt="merry christmaC:\Users\olive\Desktop\Web Development\cute1.jpegs">
     <div class="journal-2">
       <h2>💕想小仙女的一天!💕</h2>
       <p>呜呜呜😥😥</p>
